# qbr-budapest

./: .gitignore  .pre-commit-config.yaml  .yamllint  README.md  pyproject.toml
.github/workflows/: build_and_push_ee_image.yml  pages.yml  publish_mkdocs.yml
content/: README.md
content/assets/javascripts/: username-replacer.js
content/assets/stylesheets/: extra.css
content/labs/: environment-setup.md  lab-01-environment.md  lab-02-deploy.md  lab-03-validate.md  lab-04-wrap-up.md  workshop-wrap-up.md
content/labs/exposing-applications/: 01-kubernetes-dns-basics.md  02-loadbalancer.md  03-taikun-ingress-basics.md  04-taikun-ingress-managed-apps.md  05-taikun-ingress-certmanager.md  06-taikun-link.md  index.md
content/mcp/: configuration.md  cursor.md  index.md  install.md  lab-01-connection.md  lab-02-projects-catalogs.md  prerequisites.md  resources.md  tools.md
content/reference/: glossary.md  troubleshooting.md
content/workshop/: agenda.md  overview.md  prerequisites.md
instructor/: README.md
instructor/mkdocs/: mkdocs.yml  requirements-ci.txt  requirements.txt
instructor/mkdocs/overrides/partials/integrations/analytics/: custom.html
