[project]
name = "qbr-budapest"
dynamic = ["version"]
description = "QBR Cloudera Cloud Factory workshop — MkDocs lab guide"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Webster Mudge", email = "wmudge@cloudera.com" },
  { name = "Jim Enright", email = "jenright@cloudera.com" },
  { name = "Ronald Suplina", email = "rsuplina@cloudera.com" }
]
classifiers = []
dependencies = []

[tool.hatch.version]
path = "VERSION.txt"
scheme = "semver"
validate-bump = true

[tool.hatch.envs.default]
python = "3.12"
detached = true
dependencies = [
  "pre-commit",
  "unidecode",
  "ansible-core<2.17", # For RHEL 8 support
  "ansible-navigator",
  "ansible-lint",
]

[tool.hatch.envs.default.scripts]
lint = [
  "pre-commit run -a",
  "ansible-lint --fix",
]

[tool.hatch.envs.mkdocs]
python = "3.12"
detached = true
dependencies = [
  "mkdocs>=1.3.0",
  "mkdocs-material>=8.2.16",
  "mkdocs-markdownextradata-plugin>=0.2.5",
  "mkdocs-with-pdf>=0.9.3",
  "mkdocs-glightbox>=0.2.1",
  "mkdocs-same-dir",
  "mkdocs-macros-plugin>=1.3.7",
  "mkdocs-include-markdown-plugin",
]

[tool.hatch.envs.mkdocs.scripts]
serve = "cd instructor/mkdocs; mkdocs serve"
deploy = "cd instructor/mkdocs; mkdocs gh-deploy -r origin --no-history"
build = "cd instructor/mkdocs; mkdocs build"
lint = "pre-commit run -a"

[build-system]
requires = [
  "hatchling",
  "hatch-semver",
]
build-backend = "hatchling.build"
